--- a/contrasenia.html
+++ b/contrasenia.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="password.css" type="text/css">
 </head>
-<body>
+<body id="body" class="body">
     <section class="section">
         <h5>Recuperate your password</h5>
         <input type="password" placeholder="Password" id="password1" class="inputs"><i id="ojo1" class="fa fa-eye" onclick="mostrarContraseniaRecu()"></i>
